@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2022-06-04T08:08:50Z",
-  "count_outdated" : 37,
-  "uniques_outdated" : 31,
-  "count" : 38,
-  "uniques" : 32,
+  "timestamp" : "2022-06-15T00:44:18Z",
+  "count_outdated" : 38,
+  "uniques_outdated" : 32,
+  "count" : 39,
+  "uniques" : 33,
   "clones" : [
     {
-      "timestamp": "2022-05-31T00:00:00Z",
+      "timestamp": "2022-06-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
